--- a/.github/workflows/drift-detection.yml
+++ b/.github/workflows/drift-detection.yml
@@ -338,4 +338,4 @@ jobs:
                 }
               }]
             }' \
-            '${{ secrets.TEAMS_WEBHOOK_URL }}'
+            "${{ secrets.TEAMS_WEBHOOK_URL }}"
