--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -397,4 +397,4 @@ jobs:
                 }
               }]
             }' \
-            '${{ secrets.TEAMS_WEBHOOK_URL }}'
+            "${{ secrets.TEAMS_WEBHOOK_URL }}"
