--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -16,7 +16,7 @@ permissions:
 
 env:
   TERRAFORM_VERSION: '1.5.5'
-  TERRAGRUNT_VERSION: '0.55.0'
+  
   AZURE_SUBSCRIPTION_ID: '739aaf91-5cb2-45a6-ab4f-abf883e9d3f7'
 
 jobs:
@@ -90,12 +90,7 @@ jobs:
         with:
           terraform_version: ${{ env.TERRAFORM_VERSION }}
 
-      - name: 🔧 Setup Terragrunt
-        run: |
-          wget -q https://github.com/gruntwork-io/terragrunt/releases/download/v${{ env.TERRAGRUNT_VERSION }}/terragrunt_linux_amd64
-          chmod +x terragrunt_linux_amd64
-          sudo mv terragrunt_linux_amd64 /usr/local/bin/terragrunt
-          terragrunt --version
+          terraform --version
 
       - name: 🔐 Azure Login
         uses: azure/login@v2
@@ -106,11 +101,11 @@ jobs:
 
       - name: 🔍 Terraform Init
         working-directory: terraform/${{ matrix.environment }}
-        run: terragrunt init -backend=false
+        run: terraform init -backend=false
 
       - name: ✅ Terraform Validate
         working-directory: terraform/${{ matrix.environment }}
-        run: terragrunt validate
+        run: terraform validate
 
   # ========================================
   # Job 3: Terraform Plan
@@ -135,11 +130,6 @@ jobs:
           terraform_version: ${{ env.TERRAFORM_VERSION }}
           terraform_wrapper: false
 
-      - name: 🔧 Setup Terragrunt
-        run: |
-          wget -q https://github.com/gruntwork-io/terragrunt/releases/download/v${{ env.TERRAGRUNT_VERSION }}/terragrunt_linux_amd64
-          chmod +x terragrunt_linux_amd64
-          sudo mv terragrunt_linux_amd64 /usr/local/bin/terragrunt
 
       - name: 🔐 Azure Login
         uses: azure/login@v2
@@ -150,13 +140,13 @@ jobs:
 
       - name: 🔍 Terraform Init
         working-directory: terraform/${{ matrix.environment }}
-        run: terragrunt init
+        run: terraform init
 
       - name: 📋 Terraform Plan
         id: plan
         working-directory: terraform/${{ matrix.environment }}
         run: |
-          terragrunt plan -out=tfplan -no-color > plan_output.txt 2>&1
+          terraform plan -out=tfplan -no-color > plan_output.txt 2>&1
           cat plan_output.txt
         continue-on-error: true
 
