--- a/.github/workflows/terraform-deploy.yml
+++ b/.github/workflows/terraform-deploy.yml
@@ -29,6 +29,7 @@ env:
   TERRAFORM_VERSION: '1.5.5'
   TERRAGRUNT_VERSION: '0.55.0'
   TERRAFORM_DOCS_VERSION: 'v0.17.0'
+  AZURE_SUBSCRIPTION_ID: '739aaf91-5cb2-45a6-ab4f-abf883e9d3f7'
 
 jobs:
   deploy:
@@ -58,11 +59,11 @@ jobs:
           terragrunt --version
 
       - name: Azure Login - OIDC
-        uses: azure/login@v1
+        uses: azure/login@v2
         with:
           client-id: ${{ secrets.AZURE_CLIENT_ID }}
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          subscription-id: ${{ env.AZURE_SUBSCRIPTION_ID }}
 
       # ============================================
       # Pre-Deploy Validation
