--- a/.github/workflows/terraform-pr.yml
+++ b/.github/workflows/terraform-pr.yml
@@ -20,6 +20,7 @@ env:
   CHECKOV_VERSION: 'latest'
   INFRACOST_VERSION: 'latest'
   TERRAFORM_DOCS_VERSION: 'v0.17.0'
+  AZURE_SUBSCRIPTION_ID: '739aaf91-5cb2-45a6-ab4f-abf883e9d3f7'
 
 jobs:
   validation:
@@ -49,11 +50,11 @@ jobs:
           terragrunt --version
 
       - name: Azure Login - OIDC
-        uses: azure/login@v1
+        uses: azure/login@v2
         with:
           client-id: ${{ secrets.AZURE_CLIENT_ID }}
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          subscription-id: ${{ env.AZURE_SUBSCRIPTION_ID }}
 
       # ============================================
       # GATE 1: Terraform Formatting
