--- a/.github/workflows/drift-detection.yml
+++ b/.github/workflows/drift-detection.yml
@@ -47,16 +47,14 @@ jobs:
           terraform_version: ${{ env.TERRAFORM_VERSION }}
           terraform_wrapper: false
 
-          terraform --version
-
-      - name: 🔐 Azure Login
+      - name: Azure Login
         uses: azure/login@v2
         with:
           client-id: ${{ secrets.AZURE_CLIENT_ID }}
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ env.AZURE_SUBSCRIPTION_ID }}
 
-      - name: 🔍 Terraform Init
+      - name: Terraform Init
         working-directory: terraform/environments/hub
         env:
           ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
@@ -65,7 +63,7 @@ jobs:
           ARM_USE_OIDC: true
         run: terraform init
 
-      - name: 🔎 Terraform Plan (Drift Detection)
+      - name: Terraform Plan (Drift Detection)
         id: drift
         working-directory: terraform/environments/hub
         env:
