fix: Corregir configuración terraform-docs en workflows
- Cambiar working-dir de 'terraform/environments/hub' a '.'
- Usar recursive-path para especificar la ruta correcta
- Evita error 'stat terraform/environments/hub/terraform: no such file or directory'
- Aplica a terraform-deploy.yml y terraform-pr.yml

terraform-docs espera rutas relativas desde el root del repositorio
cuando se usa working-dir, no dentro del directorio especificado.

--- a/.github/workflows/terraform-deploy.yml
+++ b/.github/workflows/terraform-deploy.yml
@@ -173,12 +173,13 @@ jobs:
         if: steps.apply.outputs.status == 'success'
         uses: terraform-docs/gh-actions@v1.0.0
         with:
-          working-dir: terraform/environments/hub
+          working-dir: .
           output-file: README.md
           output-method: inject
           git-push: true
           git-commit-message: "docs(terraform): Auto-update documentation after deploy [skip ci]"
-          recursive: false
+          recursive: true
+          recursive-path: terraform/environments/hub
 
       - name: 📝 Generate Infrastructure Report
         if: steps.apply.outputs.status == 'success'
