fix: Deshabilitar terraform-docs temporalmente para PoC
- Comentar terraform-docs steps en terraform-deploy.yml
- Comentar terraform-docs steps en terraform-pr.yml
- Comentar steps dependientes (Commit Updated Docs, terraform-docs Summary)
- Evita error 'open usage.tf: no such file or directory'

Razón: terraform-docs busca archivos de configuración específicos
que no existen en el proyecto actual. Para producción, crear
.terraform-docs.yml con la configuración adecuada.

Prioridad: Hacer funcionar el deployment primero, docs después.

--- a/.github/workflows/terraform-deploy.yml
+++ b/.github/workflows/terraform-deploy.yml
@@ -169,17 +169,19 @@ jobs:
       # ============================================
       # Post-Deploy Documentation
       # ============================================
-      - name: 📚 Update Documentation (terraform-docs)
-        if: steps.apply.outputs.status == 'success'
-        uses: terraform-docs/gh-actions@v1.0.0
-        with:
-          working-dir: .
-          output-file: README.md
-          output-method: inject
-          git-push: true
-          git-commit-message: "docs(terraform): Auto-update documentation after deploy [skip ci]"
-          recursive: true
-          recursive-path: terraform/environments/hub
+      # NOTE: terraform-docs temporarily disabled for PoC
+      # Re-enable after creating .terraform-docs.yml config file
+      # - name: 📚 Update Documentation (terraform-docs)
+      #   if: steps.apply.outputs.status == 'success'
+      #   uses: terraform-docs/gh-actions@v1.0.0
+      #   with:
+      #     working-dir: .
+      #     output-file: README.md
+      #     output-method: inject
+      #     git-push: true
+      #     git-commit-message: "docs(terraform): Auto-update documentation after deploy [skip ci]"
+      #     recursive: true
+      #     recursive-path: terraform/environments/hub
 
       - name: 📝 Generate Infrastructure Report
         if: steps.apply.outputs.status == 'success'
