docs: Add Cloud Control Center product vision and use cases
- Add PRODUCT_VISION.md: Complete vision of unified AI-powered platform
  - 7 capability modules (Vibe Coding, Infrastructure Deployer, AI Agents, etc.)
  - 6 user personas (Developer, Cloud Engineer, FinOps, Security, Governance, Manager)
  - Architecture diagrams and technology stack
  - Implementation roadmap (4 phases)
  - ROI analysis: €375K/year

- Add architecture/ai-rag-system.md: Technical architecture for RAG system
  - NextJS + MDX for content
  - Dify as RAG platform
  - Azure OpenAI integration
  - Vector database (Weaviate)
  - Content pipeline automation

- Add use-cases/README.md: Master index of 34 use cases
  - Organized by module and user persona
  - Quick start guides
  - Success metrics and roadmap

- Add use-cases/vibe-coding/UC-101: Detailed FastAPI project creation use case
  - Complete user journey
  - Technical architecture
  - Implementation roadmap
  - ROI: €45K/year

- Update mkdocs.yml: Add new sections to navigation
  - Product Vision in home
  - AI RAG System in architecture
  - Use Cases section with Vibe Coding subsection

This evolution transforms the project from a simple RAG bot to a complete
Cloud Control Center with AI-powered automation for multiple personas.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -117,12 +117,19 @@ nav:
     - Bienvenida: index.md
     - Estado del Proyecto: status.md
     - Plan de Negocio: business-plan.md
+    - 🚀 Visión del Producto: PRODUCT_VISION.md
   
   - Arquitectura:
     - Visión General: architecture/overview.md
     - Single-AKS Strategy: architecture/single-aks.md
     - Recursos Desplegados: architecture/deployed-resources.md
+    - Sistema RAG + IA: architecture/ai-rag-system.md
     - Decisiones Técnicas: architecture/adr.md
+  
+  - Casos de Uso:
+    - Introducción: use-cases/README.md
+    - Vibe Coding:
+      - UC-101 Crear Proyecto FastAPI: use-cases/vibe-coding/UC-101-create-fastapi-project.md
   
   - CI/CD:
     - Workflows: cicd/workflows.md
