--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,36 +4,7 @@ on:
   push:
     branches:
       - master
-         - name: 🔐 Azure Login
-        uses: azure/login@v2
-        with:
-          client-id: ${{ secrets.AZURE_CLIENT_ID }}
-          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-          subscription-id: ${{ env.AZURE_SUBSCRIPTION_ID }}
-
-      - name: 🔍 Terraform Init
-        working-directory: terraform/environments/hub
-        env:
-          ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
-          ARM_SUBSCRIPTION_ID: ${{ env.AZURE_SUBSCRIPTION_ID }}
-          ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
-          ARM_USE_OIDC: true
-        run: terraform init
-
-      - name: 📋 Terraform Plan
-        id: plan
-        working-directory: terraform/environments/hub
-        env:
-          ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
-          ARM_SUBSCRIPTION_ID: ${{ env.AZURE_SUBSCRIPTION_ID }}
-          ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
-          ARM_USE_OIDC: true
-        run: |
-          terraform plan -out=tfplan -detailed-exitcode -no-color > plan_output.txt 2>&1 || EXIT_CODE=$?
-          cat plan_output.txt
-          
-          # detailed-exitcode returns:
-          # 0 - No changes:
+    paths:
       - 'terraform/**'
       - '.github/workflows/deploy.yml'
   
@@ -108,7 +79,7 @@ jobs:
           terraform_version: ${{ env.TERRAFORM_VERSION }}
           terraform_wrapper: false
 
-      - name:  Azure Login
+      - name: 🔐 Azure Login
         uses: azure/login@v2
         with:
           client-id: ${{ secrets.AZURE_CLIENT_ID }}
