📚 Add chatbot integration + documentation restructure
✨ New Features:
- Integrated Nirvana Tech Support Assistant chatbot (gpt-4o-mini)
- Custom React component DifyChatButton with floating button
- WebApp approach using Dify iframe embedding
- Chatbot available on all pages globally

📖 Documentation:
- Added CHATBOT_INTEGRATION.md (comprehensive guide)
- Added QUICK_START.md (5-minute setup guide)
- Added docs/guides/chatbot-integration.md (GitHub Pages)
- Added docs/guides/quick-start-app.md (GitHub Pages)
- Updated docs/index.md with chatbot section
- Updated mkdocs.yml navigation

🧹 Cleanup:
- Removed 7 obsolete documentation files
- Consolidated documentation structure

🔧 Configuration:
- Modified layout.tsx to include DifyChatButton globally
- Updated homepage with chatbot info card
- Removed non-functional test chat button

🎯 Impact:
- Chatbot fully functional at http://localhost:3000
- Documentation will be accessible via GitHub Pages
- Clean, organized documentation structure

--- a/apps/control-center-ui/kubernetes/deployment.yaml
+++ b/apps/control-center-ui/kubernetes/deployment.yaml
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
       - name: control-center-ui
-        image: dxccloudmindx0sa6l.azurecr.io/control-center-ui:latest
+        image: dxccloudmindx0sa6l.azurecr.io/control-center-ui:1.9.1
         ports:
         - containerPort: 3000
           name: http
