--- a/apps/control-center-ui/package.json
+++ b/apps/control-center-ui/package.json
@@ -9,12 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^6.18.0",
     "@tanstack/react-query": "^5.90.5",
+    "@types/pg": "^8.15.5",
     "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.3",
     "lucide-react": "^0.546.0",
     "next": "14.2.0",
+    "openai": "^6.7.0",
+    "pg": "^8.16.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwind-merge": "^3.3.1",
@@ -29,6 +34,7 @@
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.0",
     "postcss": "^8.4.39",
+    "prisma": "^6.18.0",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.5.4"
   }
