--- a/apps/control-center-ui/package.json
+++ b/apps/control-center-ui/package.json
@@ -20,6 +20,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
+    "handlebars": "^4.7.8",
     "lucide-react": "^0.546.0",
     "next": "14.2.0",
     "openai": "^6.7.0",
@@ -28,6 +29,7 @@
     "react-dom": "^18.3.1",
     "react-markdown": "^10.1.0",
     "remark-gfm": "^4.0.1",
+    "simple-git": "^3.28.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "zustand": "^5.0.8"
