feat: Add Nirvana Agent Hub foundation (Phase 1)
## Agent Hub Architecture
- ADR-011: Comprehensive multi-agent system architecture
- 4 core components: Agents, Prompts, Instructions, Chat Modes
- MCP integration strategy for Azure, AKS, DevOps, Docs
- RBAC permissions (Admin, Developer, Business User)
- 10-week implementation timeline

## Repository Structure
- docs/features/agent-hub/: Main Agent Hub directory
  - agents/community/: 2 imported agents (ADR Generator, Terraform)
  - agents/dxc-custom/: DXC proprietary agents (placeholder)
  - prompts/: Reusable prompt templates (placeholder)
  - instructions/: Technology-specific specs (placeholder)
  - chatmodes/: Conversational modes (placeholder)
  - README.md: Comprehensive documentation

## Community Agents Imported
1. ADR Generator: Expert agent for creating structured ADRs
2. Terraform Agent: IaC specialist with MCP server integration

## Security
- Updated .gitignore to exclude sensitive files
- Removed backup files with credentials from tracking
- Excluded helm charts and documentation with secrets

Phase 1 Progress: 4/11 tasks completed
Next: Import prompts, instructions, and chat modes

--- a/.gitignore
+++ b/.gitignore
@@ -104,8 +104,20 @@ Thumbs.db
 .env
 .env.local
 .env.*.local
+.env.local.backup
 secrets/
 credentials/
+
+# Backups with sensitive data
+backups/
+
+# Helm charts with secrets
+helm-dify-chart/values-custom*.yaml
+helm-dify-chart/values.yaml
+
+# Documentation with credentials
+apps/control-center-ui/KNOWLEDGE_PORTAL_READY.md
+docs/features/knowledge-portal/USER_GUIDE.md
 
 # Kubernetes
 kubeconfig
